tests/baselines/reference/parameterPropertyInConstructor3.errors.txt
parameterPropertyInConstructor3.ts(2,22): error TS2398: 'constructor' cannot be used as a parameter property name.


==== parameterPropertyInConstructor3.ts (1 errors) ====
    class Foo {
      constructor(public constructor: string) {}
                         ~~~~~~~~~~~
!!! error TS2398: 'constructor' cannot be used as a parameter property name.
    }
    